--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
     <section id="contact" class="bg-light-gray">
         <div class="container">
             <div class="row  white-shadow">
-                <div class="col-lg-12 text-center">
+                <div class="col-lg-12 text-center" style="padding:20px">
                     <h2 class="section-heading"
                         style="text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;">Contact Us</h2>
                     <div class="white-black-text">
