remove old contact info

--- a/index.html
+++ b/index.html
@@ -323,22 +323,8 @@
                     <div class="white-black-text">
                         <span style="font-size:1.5em;">
                             <div class="col-sm-6">
-                                MASLEY Enterprises Inc.<br />
-                                <span class="glyphicon glyphicon-earphone"></span> 302-427-9885<br />
-                                <span class="glyphicon glyphicon-print"></span> 302-427-0813<br />
                                 <span class="glyphicon glyphicon-envelope"></span>&nbsp;info@glovesize.com<br />
                                 <br />
-                            </div>
-                            <div class="col-sm-6">
-                                Mailing Address:<br />
-                                2207 Concord Pike PMB 190<br />
-                                Wilmington, DE 19803-2908<br />
-                                <br />
-                            </div>
-                            <div class="col-sm-12">
-                                Factory Address:<br />
-                                1601 Jessup Street<br />
-                                Wilmington, Delaware 19802<br />
                             </div>
                         </span>
                     </div>
@@ -555,7 +541,7 @@
                             <h2>Order</h2>
                             <p>
                                 To order, print out the pdf linked below and either fax or email the filled out form to
-                                either info@glovesize.com or (302)-427-0813.
+                                either info@glovesize.com
                             </p>
                             <h2>Find the form <a href="pdf/orderform.pdf">here</a>!</h2>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i
